--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,11 @@
  *= require_tree .
  *= require_self
  */
+ @import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
+
+ body {
+   background-image: url('../images/background-medium.png');
+   background-color: #f1185c;
+   background-size: cover;
+   background-repeat: repeat
+ }
