--- a/app/javascript/components/Home.css
+++ b/app/javascript/components/Home.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
 
 body {
   background-image: url('../images/background-medium.png');
   background-color: #f1185c;
   background-size: cover;
   background-repeat: repeat
-}
+} */
