--- a/app/javascript/components/SignIn.css
+++ b/app/javascript/components/SignIn.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
 
 body {
   background-image: url('../images/background-medium.png');
@@ -6,4 +6,4 @@ body {
   background-size: cover;
   background-repeat: repeat
 }
-
+ */
