--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,11 +2,15 @@
  *= require_tree .
  *= require_self
  */
- @import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
 
- body {
-   background-image: url('background-medium.png');
-   background-color: #f1185c;
-   background-size: cover;
-   background-repeat: repeat
- }
+body {
+  background-image: url('background-medium.png');
+  background-color: #f1185c;
+  background-size: cover;
+  background-repeat: repeat
+}
+
+button:active {
+  transform: translateY(4px);
+}
