--- a/app/javascript/components/Home.css
+++ b/app/javascript/components/Home.css
@@ -7,7 +7,7 @@ body {
   background-repeat: repeat
 } */
 
-.container {
+/* .container {
   display: "flex";
   flex-direction: "row";
   justify-content: "space-around";
@@ -21,4 +21,4 @@ body {
   height: "75px";
   padding: "10px";
   font-size: "4rem";
-};
+}; */
